created simple es5 / angular 2 version

--- a/index.html
+++ b/index.html
@@ -4,29 +4,12 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.min.js"></script>
-    <script src="app.js"></script>
   </head>
 
   <body>
-    <div class="container text-center" ng-controller="pongScoreCtrl as pongCtrl">
-      <h1>Ping Pong Score Keeper</h1>
-      <pong-score-form>
-        <div class="panel panel-default">
-          <div class="panel-body">
-            <div class="row">
-              <div class="col-sm-6">
-                <h2>Wins: {{formCtrl.player.wins}}</h2>
-                <button type="button" class="btn btn-primary" ng-click="formCtrl.addWin()">Add Win</button>
-              </div>
-              <div class="col-sm-6">
-                <h2>Losses: {{formCtrl.player.losses}}</h2>
-                <button type="button" class="btn btn-danger" ng-click="formCtrl.addLoss()">Add Loss</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </pong-score-form>
-    </div>
+    <pong-score-app></pong-score-app>
+
+    <script src="https://code.angularjs.org/2.0.0-alpha.44/angular2.sfx.dev.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
