--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="container text-center">
       <h1>Ping Pong Score Keeper</h1>
-      <div class="panel panel-default pong-score" ng-controller="pongScoreCtrl as pongCtrl">
+      <div class="panel panel-default pong-score" ng-controller="PongScoreCtrl as pongCtrl">
         <div class="panel-body">
           <div class="row">
             <div class="col-sm-6">
